# skygen-wgpu

./: Cargo.toml
shaders/: light.wgsl  material.wgsl  shader.wgsl
src/: app.rs  instance.rs  lib.rs  material.rs  mesh.rs  model.rs  resources.rs  state.rs  texture.rs  vertex.rs
src/camera/: camera.rs  controller.rs  mod.rs  projection.rs  uniform.rs
src/projection/: camera.rs  mod.rs
src/renderer/: buffer.rs  container.rs  graphics.rs  mesh.rs  mod.rs  model.rs  pipeline.rs
