[package]
name = "skygen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bytemuck = { version = "1.12.3", features = ["derive"] }
env_logger = "0.10.0"
glam = "0.22.0"
hashbrown = "0.13.2"
image = "0.24.5"
legion = "0.4.0"
log = "0.4.17"
once_cell = "1.17.0"
parking_lot = "0.12.1"
pollster = "0.2.5"
tobj = { version = "3.2.3", features = ["async"] }
wgpu = "0.14.2"
winit = "0.27.5"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
